[metadata]
name = comet-pqc
version = attr: comet_pqc.__version__
description =  Process Quality Control for CMS outer tracker.
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernhard Arnold
author_email = bernhard.arnold@oeaw.ac.at
url = https://github.com/hephy-dd/diode-measurement
license = GPLv3
classifiers =
    Framework :: PyQt5
    Programming Language :: Python :: 3

[options]
python_requires = >=3.7
packages = find:
install_requires =
    comet @ git+https://github.com/hephy-dd/comet.git@0.13.2
    analysis-pqc @ git+https://github.com/hephy-dd/analysis-pqc.git@0.7.1
    PyVISA==1.11.*
    PyVISA-py==0.5.*
    PyVISA-sim==0.4.*
    pyserial==3.5.*
    pyusb==1.2.*
    PyQt5==5.15.*
    PyQtChart==5.15.*
    PyYAML==6.0.*
    jsonschema==3.2.*
    bottle==0.12.*
    waitress==2.1.*
include_package_data = True

[options.packages.find]
exclude = tests

[options.package_data]
comet_pqc.assets.config.chuck = *.yaml
comet_pqc.assets.config.sample = *.yaml
comet_pqc.assets.config.sequence = *.yaml
comet_pqc.assets.icons = *.svg
comet_pqc.assets.schema =
    chuck.yaml
    sample.yaml
    sequence.yaml

[options.entry_points]
console_scripts =
    comet-pqc = comet_pqc.__main__:main

[flake8]
ignore = E501
