[metadata]
name = pqc
version = attr: pqc.__version__
description =  Process Quality Control for CMS outer tracker.
long_description = file: README.md
long_description_content_type = text/markdown
author = Bernhard Arnold
author_email = bernhard.arnold@oeaw.ac.at
url = https://github.com/hephy-dd/diode-measurement
license = GPLv3
classifiers =
    Framework :: PyQt5
    Programming Language :: Python :: 3

[options]
python_requires = >=3.8
packages = find:
install_requires =
    comet @ git+https://github.com/hephy-dd/comet.git@0.13.2
    analysis-pqc @ git+https://github.com/hephy-dd/analysis-pqc.git@0.8.1
    PyVISA==1.11.*
    PyVISA-py==0.5.*
    PyQt5==5.15.9
    PyQtChart==5.15.6
    PyYAML==6.0.1
    jsonschema==3.2.0
    flask==2.3.2
    waitress==2.1.2
include_package_data = True

[options.packages.find]
exclude = tests

[options.package_data]
pqc.assets.config.chuck = *.yaml
pqc.assets.config.sample = *.yaml
pqc.assets.config.sequence = *.yaml
pqc.assets.icons = *.svg
pqc.assets.schema =
    chuck.yaml
    sample.yaml
    sequence.yaml

[options.entry_points]
console_scripts =
    pqc = pqc.__main__:main

[flake8]
ignore = E501

[mypy]

[mypy-pint.*]
ignore_missing_imports = True

[mypy-comet.*]
ignore_missing_imports = True

[mypy-analysis_pqc.*]
ignore_missing_imports = True
